# ros_plain_cmake

./: .gitignore  LICENSE  README.md  plain_cmakeConfig.cmake.in
src/catkin_pkg/: CMakeLists.txt  package.xml
src/catkin_pkg_2/: CMakeLists.txt  package.xml
src/catkin_pkg_2/src/: test_node.cpp
src/consumer/: CMakeLists.txt
src/consumer/src/: app.cpp
src/consumer_cmake/: CMakeLists.txt
src/my_plain_cmake/: .gitignore  CMakeLists.txt  README.md  package.xml
src/my_plain_cmake/src/: matrix_operations.cpp
src/plain_cmake/: CMakeLists.txt  package.xml  plain_cmakeConfig.cmake.in
src/plain_cmake/include/plain_cmake/: matrix_operations.h
src/plain_cmake/src/: example.cpp
