<?xml version="1.0"?>
<package format="2">
  <name>catkin_pkg</name>
  <version>0.1.0</version>
  <description>The catkin_pkg package</description>

  <maintainer email="tim.uebelhoer@rwth-aachen.de">Tim Übelhör</maintainer>
  <license>MIT</license>
  <url type="repositorz">https://github.com/Tuebel/ros_plain_cmake</url>
  <author email="tim.uebelhoer@rwth-aachen.de">Tim Übelhör</author>

  <depend>plain_cmake</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
