<?xml version="1.0"?>
<package format="2">
  <name>plain_cmake</name>
  <version>0.1.0</version>
  <description>An example plain CMake project for ROS</description>

  <maintainer email="tim.uebelhoer@rwth-aachen.de">Tim Übelhör</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/Tuebel/ros_plain_cmake</url>
  <author email="tim.uebelhoer@rwth-aachen.de">Tim Übelhör</author>

  <depend>eigen</depend>
  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
